// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown matches snapshot 1`] = `
.c5 {
  cursor: pointer;
}

.c3 {
  overflow: visible;
}

.c1 .c2 + .c4 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 .c2.focus-within + .c4 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c1 .c2:focus-within + .c4 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c1 .c2 > .c4 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c1 .c2.focus-within > .c4 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 .c2:focus-within > .c4 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 .c2 > *:not(.c4) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c1 .c2 > *:not(.c4) {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 .c2.focus-within > *:not(.c4) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c1 .c2:focus-within > *:not(.c4) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c6 {
  margin: 0;
  padding: 0.6rem 0;
  background: #f5f5f5;
}

.c6 li button,
.c6 li a {
  text-align: left;
  cursor: pointer;
  outline: none;
  border: none;
  padding: 0 0.8rem;
  margin: 0;
  height: 3.2rem;
  background: none;
  min-width: 7.2rem;
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.4rem;
  line-height: 2rem;
}

.c6 li button:hover,
.c6 li a:hover,
.c6 li button:focus,
.c6 li a:focus {
  background: #d5d5d5;
}

.c0 {
  overflow: visible;
  position: relative;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3"
  >
    <button
      className="c4 c5"
      tabIndex={-1}
    >
      show more
    </button>
    <ol
      className="c6"
    >
      <li>
        <button
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li>
        <a
          href="/wooo"
          onClick={[Function]}
        >
          Edit
        </a>
      </li>
    </ol>
  </div>
  <button
    className="c4 c5"
    tabIndex={-1}
  >
    show more
  </button>
</div>
`;

exports[`Dropdown matches snapshot for tab hidden (closed) 1`] = `
.c3 {
  cursor: pointer;
}

.c1 > *:not(.c2) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c4 .c5 + .c2 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 .c5.focus-within + .c2 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c4 .c5:focus-within + .c2 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c4 .c5 > .c2 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c4 .c5.focus-within > .c2 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 .c5:focus-within > .c2 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 .c5 > *:not(.c2) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c4 .c5 > *:not(.c2) {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 .c5.focus-within > *:not(.c2) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c4 .c5:focus-within > *:not(.c2) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c0 {
  overflow: visible;
  position: relative;
}

<div
  className="c0 c1"
>
  <button
    className="c2 c3"
    onClick={[Function]}
  >
    show more
  </button>
</div>
`;

exports[`Dropdown matches snapshot for tab hidden (open) 1`] = `
.c3 {
  cursor: pointer;
}

.c1 > *:not(.c2) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c5 .c6 + .c2 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c5 .c6.focus-within + .c2 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c5 .c6:focus-within + .c2 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c5 .c6 > .c2 {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c5 .c6.focus-within > .c2 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c5 .c6:focus-within > .c2 {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c5 .c6 > *:not(.c2) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c5 .c6 > *:not(.c2) {
  height: 0;
  width: 0;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c5 .c6.focus-within > *:not(.c2) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c5 .c6:focus-within > *:not(.c2) {
  height: unset;
  width: unset;
  -webkit-clip: unset;
  clip: unset;
  overflow: visible;
}

.c4 {
  margin: 0;
  padding: 0.6rem 0;
  background: #f5f5f5;
}

.c4 li button,
.c4 li a {
  text-align: left;
  cursor: pointer;
  outline: none;
  border: none;
  padding: 0 0.8rem;
  margin: 0;
  height: 3.2rem;
  background: none;
  min-width: 7.2rem;
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.4rem;
  line-height: 2rem;
}

.c4 li button:hover,
.c4 li a:hover,
.c4 li button:focus,
.c4 li a:focus {
  background: #d5d5d5;
}

.c0 {
  overflow: visible;
  position: relative;
}

<div
  className="c0 c1"
>
  <button
    className="c2 c3"
    onClick={[Function]}
  >
    show more
  </button>
  <ol
    className="c4"
  >
    <li>
      <button
        onClick={[Function]}
      >
        Delete
      </button>
    </li>
    <li>
      <a
        href="/wooo"
        onClick={[Function]}
      >
        Edit
      </a>
    </li>
  </ol>
</div>
`;
